syntax = "proto3";

message IncomingDirectMessage {
    string recipient = 1;
    string content = 2;
    string timestamp = 3;
}

message OutgoingDirectMessage {
    string sender = 1;
    string content = 2;
    string timestamp = 3;
    string chatId = 4;
}

message Empty {}

message IncomingGroupMessage {
    string group = 1;
    string content = 2;
    string timestamp = 3;
}

message OutgoingGroupMessage {
    string group = 1;
    string sender = 2;
    string content = 3;
    string timestamp = 4;
}

service ChatService {
    rpc sendDirectMessage(IncomingDirectMessage) returns (Empty) {}
    rpc receiveDirectMessage(Empty) returns (stream OutgoingDirectMessage) {}
    rpc sendGroupMessage(stream IncomingGroupMessage) returns (stream OutgoingGroupMessage) {}
}